Updates from Overleaf

--- a/head/abstracts.tex
+++ b/head/abstracts.tex
@@ -8,9 +8,21 @@
 \markboth{Abstract}{Abstract}
 \addcontentsline{toc}{chapter}{Abstract (English/Français)} % adds an entry to the table of contents
 % put your text here
-\add{Add abstract}
 
 
+
+
+
+Preterm birth is a major risk factor for neurodevelopment impairments often only appearing later in life. The brain is still in full blown development during adolescence, making this a promising window for intervention. It is thus crucial to understand the mechanisms of altered brain function in this population. The aim of this thesis was to investigate how the brain dynamically reconfigures its own organisation over time in preterm-born young adolescents. Research to date has mainly focused on structural disturbances or in static features of brain function in this population. However, recent studies have shown that brain activity is highly dynamic both spontaneously and during performance of a task, and that small disruptions in this complex architecture may interfere with normal behaviour and cognitive abilities.   
+
+
+\hspace{1cm} This thesis explores the dynamic nature of brain function in preterm-born adolescents in three steps: First, we investigate changes in spontaneous brain activity over time using a resting-state paradigm. Here, we study how the variability of the blood oxygenation level dependent signal (BOLD), a measure previously linked to cognitive performance, develops in a preterm- and a term-born groups. We find preterm participants show an altered trajectory of BOLD variability development during early adolescence. Moreover, we show that the dynamic patterns of co-activation with the dorsal anterior cingulate cortex (ACC), a key node of the salience network, also develop in a different way in the preterm as compared to the control group. Secondly, we use a task-based approach to look into changes in brain activation that are driven by performance of a task. To this end, we select a reality filtering activity known to tap into the orbitofrontal cortex (OFC), a brain region that is particularly vulnerable in the preterm. We find that, although the preterm group is able to perform the task successfully, OFC activation is significantly higher in the control participants. Finally, inspired by the successful field of dynamic functional connectivity which has mainly flourished in resting-state paradigms, we develop a novel method to look into task-driven modulations of brain connectivity in a time-resolved way. We then apply this new approach to a third data set involving a movie watching and emotion regulation task. We find several subtle but significant seed; task; and group effects that characterise each of the dynamic co-activation patterns.  
+
+\hspace{1cm} In short, we introduce a method for time-resolved evaluation of task-driven changes in brain connectivity and provide evidence of altered development of brain dynamics in preterm-born young adolescents. Our results thus highlight the importance of considering the dynamic aspects of brain function when studying clinical populations.
+
+\vspace{1cm}
+
+\hspace{1cm} \textbf{Keywords:} non-invasive neuroimaging, functional MRI, dynamic analysis, preterm, BOLD signal variability, co-activation patterns
 
 
 
