--- a/main/ch2_background.tex
+++ b/main/ch2_background.tex
@@ -209,7 +209,7 @@ In fact, according to the Institute of Medicine of the National Academy of Scien
 Preterm birth puts children at a considerably higher risk of developing a broad range of cognitive deficits \citep{Brydges2018, Twilhaar2018}. % \Vandewouw et al, Human Brain Mapping, 2019
 By school age, up to 50\% of these children develop cognitive, language, or socio-emotional disabilities that are likely linked to neurological abnormalities starting before birth, lasting through life and into adulthood \citep{Gozzo2009, Chaminade2013, Moiseev2014, Hornman2016, Thomason2017, Burnett2018}.
 
-A meta-analysis of cognitive outcomes in more than 6000 children and teenagers born very preterm \citep{Brydges2018} showed that they scored significantly lower on intelligence tests; measures of executive functioning; and processing speed, as compared to their term born peers across a wide range of ages (4--17). This study found no association between the children's age at assessment and cognitive impairment, indicating that very preterm born children fail to catch up with term born ones throughout childhood and adolescent. In that sense, it seems that the differences between the two groups are due to a deficit in PT children, rather than a delay \citep{Brydges2018}. This is in line with \citep{Linsell2018}'s study, which found that cognitive function did not recover or deteriorate between infancy and adulthood in extremely preterm individuals, and explain why \citep{Doyle2010} find long-lasting effects of extremely preterm birth in an adult cohort. Importantly, socio-economic status at birth has been shown to affect IQ scores in adults born very preterm \citep{Breeman2017}, and to modify the relationship between early-life events and neurodevelopmental outcomes in preterm born children. Further understanding these complex relationships may shed light into potential avenues for promoting improved outcomes for infants at higher risk of neurodevelopmental issues \citep{Benavente-Fernandez2020}. 
+A meta-analysis of cognitive outcomes in more than 7000 children and teenagers born very preterm and aged 5--20 years old found that this population showed significant deficits in intelligence \cite{Twilhaar2018}. A similar study by \citet{Brydges2018}, involving more than 6000 individuals, showed that they scored significantly lower on intelligence tests; measures of executive functioning; and processing speed, as compared to their term born peers across a wide range of ages (4--17). This study found no association between the children's age at assessment and cognitive impairment, indicating that very preterm born children fail to catch up with term born ones throughout childhood and adolescent. In that sense, it seems that the differences between the two groups are due to a deficit in PT children, rather than a delay \citep{Brydges2018}. This is in line with \citep{Linsell2018}'s study, which found that cognitive function did not recover or deteriorate between infancy and adulthood in extremely preterm individuals, and explain why \citep{Doyle2010} find long-lasting effects of extremely preterm birth in an adult cohort. Importantly, socio-economic status at birth has been shown to affect IQ scores in adults born very preterm \citep{Breeman2017}, and to modify the relationship between early-life events and neurodevelopmental outcomes in preterm born children. Further understanding these complex relationships may shed light into potential avenues for promoting improved outcomes for infants at higher risk of neurodevelopmental issues \citep{Benavente-Fernandez2020}. 
 
 Besides difficulties in executive functions, children who were born prematurely are also at a higher risk for socio-emotional disabilities \citep{Zmyj2017}, with impaired interactions being present in relationships with family, teachers and friends \citep{Twilhaar2019}. In particular, PTB children are less likely to initiate and respond to peers' efforts to participate in joint attention \citep{Zmyj2017}, which may aggravate later social cognition impairments and thus hinder social interaction skills. Whether these differences in social competences are a product of faulty or delayed maturation remains a topic for debate: some studies point towards the former hypothesis, since these effects have also been found in individuals through adolescence  \citep{Healy2013, Saigal2016}; while others put it down to a maturational lag, with findings that PTB children catch up with their full term peers by the age of 5 \citep{Witt2018}. These inconsistencies emphasise the complexity of the effects of preterm birth and the importance of further characterising the link between brain and behaviour.
 
