--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -24,7 +24,7 @@
 \setcounter{page}{0}
 %\include{head/acknowledgements}
 %\include{head/preface}
-%\include{head/abstracts}
+\include{head/abstracts}
 
 \cleardoublepage
 \pdfbookmark{\contentsname}{toc}
