--- a/tail/appendix.tex
+++ b/tail/appendix.tex
@@ -155,7 +155,7 @@ This brief derivation also shows that the stationary PPI-CAP can be contaminated
 \clearpage
 \section{Supplementary Figures for Section \ref{section:ppicaps_preterm}}
 
-\subsection{ACC-seed PPI-CAPs in preterm-born adolescents}
+\subsection*{ACC-seed PPI-CAPs in preterm-born adolescents}
 % --------------------------------------------------------------------------
 % ACC-SEED CHOICE OF K
 % --------------------------------------------------------------------------
@@ -210,7 +210,7 @@ This brief derivation also shows that the stationary PPI-CAP can be contaminated
 % --------------------------------------------------------------------------
 
 \clearpage
-\subsection{PCC-seed PPI-CAPs in preterm-born adolescents} \label{sm_pcc_ppicaps}
+\subsection*{PCC-seed PPI-CAPs in preterm-born adolescents} \label{sm_pcc_ppicaps}
  In Chapter \ref{chapter:ch5}, Section \ref{section:ppicaps_preterm}, we perform a PPI-CAPs analysis to explore task-related dynamic connectivity using the dorsal anterior cingulate cortex as a seed. Here we provide a similar analysis using the posterior cingulate cortex (PCC). While interpreting these additional results goes beyond the goal of this Section, this additional work illustrates that task-driven dynamics are a powerful and compelling strategy to uncover features of brain function in clinical populations independently of the choice of seed. 
 \vspace{1cm}
 
