Updates from Overleaf

--- a/head/settings_custom.tex
+++ b/head/settings_custom.tex
@@ -73,3 +73,7 @@
 \usepackage{titlesec}
 \titlespacing*{\paragraph}{0pt}{3.25ex plus 1ex minus .2ex}{1em}
 
+
+% Allow figure rotation
+%\usepackage{rotating}
+\usepackage{isorot}
