--- a/main/ch2_background.tex
+++ b/main/ch2_background.tex
@@ -222,7 +222,6 @@ The most recent research indicates cognitive control impairment as a central bas
 %Emotion Regulation: https://www.ncbi.nlm.nih.gov/pubmed/31056820
 
 \subsection{Consequences of preterm birth on brain structure}
-\add{add a brief overview}
 
 To identify potential interventions that would be able to recover some of the behavioural difficulties mentioned above it is important to, first, understand how the brain is affected by preterm birth. The brain undergoes significant growth and development in the last months of gestation, which naturally puts preterm-born infants at a considerably greater risk for abnormal neurodevelopment. A great body of research has thus been dedicated to understanding the consequences of prematurity on brain structure.
 
@@ -275,17 +274,21 @@ Crucially, a recent neuroimaging study involving typically developing, fullterm-
 \label{sub:fMRI_in_preterm}
 
 
-Thanks to recent advances in the field, fMRI has been increasingly used to characterise large-scale functional networks in the brain at different stages in life \cite{Power2010}. 
+Thanks to recent advances in the field, fMRI has been increasingly used to characterise healthy brain function at different stages in life \citep{Power2010}. 
 One important extension of these investigations is to understand alterations related to atypical neurodevelopment. 
 This may lead to interventions aimed at preventing, reverting or minimising the effects of altered brain function.
 
 
-\subsection{Function} % Static / Dynamic
-\add{Fill in this section}
+FMRI is particularly well-suited to investigate paediatric populations, especially since robust measures of functional activation and connectivity can be obtained from short scanning sessions. It has been employed to uncover atypical connectivity patterns and their links to a wide range of neurodevelopmental disabilities. For instance, this technique has exposed altered brain responses in regions underlying executive functions in preterm-born children in frontal \citep{Reveillon2013,Murner-Lavanchy2014} and temporal areas \citep{Kwon2014a, Wilke2014} which were linked to impaired language performance at age 14\textendash15 \citep{Wilke2014}.
+
+Most of the studies to date, however, employ analytical methods that assume brain function to be static --- that is, they investigate averaged brain activity across the entire experiment. Given that the brain is known to be highly dynamic, there is an urgent need to know how prematurity affects the dynamic features of neural function. The aim of this thesis is thus to fill this gap.
+
+
+
 \subsection{Challenges and considerations for paediatric MRI studies}
 
 
-MRI studies often require that participants lay completely still for lengthy periods of time, especially when the experimental protocol includes several imaging modalities or task paradigms. Head movement is one of the most intractable and potentially harming confounds in this type of data, causing misalignment of subsequent frames and, as a consequence, BOLD signal or structural estimates that do not correspond to true effects \citep{Friston1996, Siegel2017}. Compared to adults, children have decreased inhibitory control \citep{Bedard2002}, and may thus find it harder to remain still during experiments, particularly  given the distracting environment of scanning sessions \citep{Greene2016}. Unsurprisingly, then, children and adolescents tend to present much higher total head motion than adult participants \citep{Satterthwaite2013b}, making the data potentially more susceptible to results that do not reflect reality \citep{Power2012}. Motion scrubbing has become and increasingly accepted --- and stringent --- way of dealing with this type of artefact over recent years \citep{Power2014a,Laumann2016}, but when the data is highly affected by motion it leads to significant data loss. The best approach is, therefore, to avoid movement as much as possible.
+MRI studies often require that participants lay completely still for lengthy periods of time, especially when the experimental protocol includes several imaging modalities or task paradigms. Head movement is one of the most intractable and potentially harming confounds in this type of data, causing misalignment of subsequent frames and, as a consequence, BOLD signal or structural estimates that do not correspond to true effects \citep{Friston1996,Siegel2017}. Compared to adults, children have decreased inhibitory control \citep{Bedard2002}, and may thus find it harder to remain still during experiments, particularly  given the distracting environment of scanning sessions \citep{Greene2016}. Unsurprisingly, then, children and adolescents tend to present much higher total head motion than adult participants \citep{Satterthwaite2013b}, making the data potentially more susceptible to results that do not reflect reality \citep{Power2012}. Motion scrubbing has become and increasingly accepted --- and stringent --- way of dealing with this type of artefact over recent years \citep{Power2014a,Laumann2016}, but when the data is highly affected by motion it leads to significant data loss. The best approach is, therefore, to avoid movement as much as possible.
 
 Unsurprinsingly, head motion in fMRI experiments involving children tends to increase with the duration of experiments both in terms of run and session time \citep{Engelhardt2017}. While taking breaks between sessions has been suggested as a way to reduce run length-related artefacts, a trade-off must be found between implementing these and keeping the total recording time as short as possible \citep{Meissner2019}.  Another design-related consideration that influences head motion in child studies is the experimental paradigm \citep{Yuan2009a}. Children are less likely to move when they have something to pay attention to, such as in task-based experiments, as compared to resting-state ones \citep{Engelhardt2017}. Given the above, a potentially reasonable trade-off for protocols that include both types of experimental paradigms would be to perform the resting-state session as early as possible, and task-based sessions in sequence, all while trying to keep the total scanning time as short as possible. 
 
