--- a/main/ch6_FuturePerspectives.tex
+++ b/main/ch6_FuturePerspectives.tex
@@ -4,14 +4,25 @@ This work explored the dynamic features of brain function in young adolescents a
 
 \section{Summary of findings}
 
-\paragraph{Resting-state brain dynamics in preterm-born young adolescents:} We investigated, for the first time, the development of blood oxygenation level dependent (BOLD) signal variability and co-activation patterns (CAPs) in young adolescents born prematurely as compared to fullterm-born controls. To address the issue of high dimensionality in voxelwise BOLD variability maps, we employed a partial least squares correlation (PLSC) approach to identify multivariate patterns of alterations across groups and how they relate to age at assessment, gestational age and an interaction between the two. We used a similar PLSC approach to identify differences in CAP expression between the groups and their relationship with the aforementioned environmental variables. Through this approach, we discovered that the development of BOLD signal variability is indeed altered in the preterm group in a broad pattern distributed across several areas of the brain, but especially in the bilateral hipoccampi and salience network including bilateral insulae and anterior cingulate cortex (ACC). Since the ACC has been recently identified in other studies as having altered connectivity in preterm-born individuals, we investigated this region further by performing an ACC-based CAPs analysis to uncover dynamic functional connectivity patterns that arise across age. Similarly to the BOLD variability analysis, we found different trajectories of CAP development in both groups.  Indeed, the change in the balance between  internally- and externally-oriented networks across age is more accentuated in the preterm group. Taken together, our observations suggest that the preterm-born brain triggers neurological compensation mechanisms that start during the highly dynamic age range of early adolescence and fail to find an optimal balance.
+\textbf{Resting-state brain dynamics in preterm-born young adolescents:} We investigated, for the first time, the development of blood oxygenation level dependent (BOLD) signal variability and co-activation patterns (CAPs) in young adolescents born prematurely as compared to fullterm-born controls. To address the issue of high dimensionality in voxelwise BOLD variability maps, we employed a partial least squares correlation (PLSC) approach to identify multivariate patterns of alterations across groups and how they relate to age at assessment, gestational age and an interaction between the two. We used a similar PLSC approach to identify differences in CAP expression between the groups and their relationship with the aforementioned environmental variables. Through this approach, we discovered that the development of BOLD signal variability is indeed altered in the preterm group in a broad pattern distributed across several areas of the brain, but especially in the bilateral hipoccampi and salience network including bilateral insulae and anterior cingulate cortex (ACC). Since the ACC has been recently identified in other studies as having altered connectivity in preterm-born individuals, we investigated this region further by performing an ACC-based CAPs analysis to uncover dynamic functional connectivity patterns that arise across age. Similarly to the BOLD variability analysis, we found different trajectories of CAP development in both groups.  Indeed, the change in the balance between  internally- and externally-oriented networks across age is more accentuated in the preterm group. Taken together, our observations suggest that the preterm-born brain triggers neurological compensation mechanisms that start during the highly dynamic age range of early adolescence and fail to find an optimal balance.
 
 
-\add{summarise chapters 4 and 5's main findings}
+\textbf{Reality Filtering task processing in preterm-born young adolescents:} To test whether pre\-term-born young adolescents would be able to complete a task that relies on a particularly vulnerable region in this population, we performed a reality filtering experiment. By looking into how brain activation changed depending on the type of stimulus being shown and comparing the preterm and control groups, we found that despite being able to perform the task with comparable accuracy to the fullterm group, the levels of OFC activation in the preterm group are lower. Moreover, no other regions were significantly more activated in the preterm than in controls. This suggests that preterm-born individuals may have developed mechanisms to optimise OFC activity such that they are still able to perform the task without depending on the same level of activation as the control group.
 
-\paragraph{Reality Filtering task processing in preterm-born young adolescents:}
 
-\paragraph{Time-resolved task-driven modulations of brain connectivity:}
+
+
+
+\textbf{Time-resolved task-driven modulations of brain connectivity:}
+We thus proceeded to investigate how brain organisation changes over time as a result of task performance in the preterm population. Given their higher risk of attentional and socio-emotional deficits, we elaborated a task that includes a movie watching aspect and an emotion regulation one. To explore this rich data set we first developed a method to recover time-resolved co-activation patterns (PPI-CAPs) and analyse their relationships with the seed, task, or an interaction with the two. We initially validate this framework in an adult data set. Once the methodology was stable, we applied it on he preterm data and extended the method to allow group comparisons. Here, we identified a series of dorsal anterior cingulate cortex (ACC)-based co-activation patterns that vary differently in preterms and controls according to the task. Interestingly, a new pattern including the limbic network emerged from this data which had not been found in the CAP analysis from Chapter \ref{chapter:ch3}, which was based on resting-state data. This is in line with existing evidence that the limbic network is involved in emotion processing. Together, these results highlight the relevance of studying brain dynamics in clinical populations. 
+
+
+
+
+
+
+
+
 
 \section{Perspective for future research}
 
