--- a/my_thesis.tex
+++ b/my_thesis.tex
@@ -20,7 +20,7 @@
 \setlength{\parskip}{0pt} %(needs to be before titlepage and frontmatter to keep the table of contents lists short)
 \frontmatter
 \input{head/titlepage.tex}
-%\include{head/dedication}
+\include{head/dedication}
 \setcounter{page}{0}
 %\include{head/acknowledgements}
 %\include{head/preface}
