--- a/tail/bibliography.bib
+++ b/tail/bibliography.bib
@@ -464,7 +464,7 @@ year = {2020}
 
 @article{Bolton2018,
 abstract = {Non-invasive prenatal screening for fetal Down syndrome (NIFTY) by maternal plasma sequencing was performed in 12 subjects with twin pregnancies, including 11 with normal fetuses and 1 with discordant fetal Trisomy 21. For every sample, it was processed, sequenced and reported as soon as it was collected as other clinical samples for singleton pregnancies. The NIFTY test was negative in the 11 pregnancies carried normal fetuses, and was positive (high risk) in the case with discordant fetal Trisomy 21. The sensitivity and specificity were both 100{\%}. This small case series suggested the NIFTY as a screening test for fetal Trisomy 21 is feasible in twin pregnancies.},
-author = {Bolton, Thomas A.W. and Jochaut, Delphine and Giraud, Anne Lise and {Van De Ville}, Dimitri},
+author = {Bolton, Thomas A. W. and Jochaut, Delphine and Giraud, Anne Lise and {Van De Ville}, Dimitri},
 doi = {10.1002/hbm.24009},
 file = {:Users/lorenafreitas/Downloads/Bolton{\_}et{\_}al-2018-Human{\_}Brain{\_}Mapping (1).pdf:pdf},
 issn = {10970193},
@@ -494,7 +494,7 @@ year = {2018}
 }
 
 @article{Bolton2020,
-author = {Bolton, Thomas A.W. and Tuleasca, Constantin and Wotruba, Diana and Rey, Gwladys and Dhanis, Herberto and Gauthier, Baptiste and Delavari, Farnaz and Morgenroth, Elenor and Gaviria, Julian and Blondiaux, Eva and Smigielski, Lukasz and {Van De Ville}, Dimitri},
+author = {Bolton, Thomas A. W. and Tuleasca, Constantin and Wotruba, Diana and Rey, Gwladys and Dhanis, Herberto and Gauthier, Baptiste and Delavari, Farnaz and Morgenroth, Elenor and Gaviria, Julian and Blondiaux, Eva and Smigielski, Lukasz and {Van De Ville}, Dimitri},
 doi = {10.1016/j.neuroimage.2020.116621},
 issn = {10538119},
 journal = {NeuroImage},
@@ -507,7 +507,7 @@ year = {2020}
 }
 
 @article{Bolton2020a,
-author = {Bolton, Thomas A.W. and Freitas, Lorena G.A. and Jochaut, Delphine and Giraud, Anne-Lise and {Van De Ville}, Dimitri},
+author = {Bolton, Thomas A. W. and Freitas, Lorena G. A. and Jochaut, Delphine and Giraud, Anne-Lise and {Van De Ville}, Dimitri},
 doi = {10.1016/j.neuroimage.2020.116571},
 issn = {10538119},
 journal = {NeuroImage},
@@ -712,6 +712,7 @@ file = {:Users/lorenafreitas/Library/Application Support/Mendeley Desktop/Downlo
 number = {2},
 pages = {262--274},
 title = {{The Chronnectome : Time-Varying Connectivity Networks as the Next Frontier in fMRI Data Discovery}},
+journal={Neuron},
 url = {https://ac.els-cdn.com/S0896627314009131/1-s2.0-S0896627314009131-main.pdf?{\_}tid=68008f76-cbf2-4e36-a1bf-2a4c26b37032{\&}acdnat=1547140357{\_}a6b68e04419eb3d9b14e373f6803fc01},
 volume = {84},
 year = {2014}
@@ -721,7 +722,7 @@ year = {2014}
 @article{Cao2019,
 author = {Cao, Xuefei and Sandstede, Bj{\"{o}}rn and Luo, Xi},
 doi = {10.3389/fnins.2019.00127},
-file = {:Users/lorenafreitas/Downloads/fnins-13-00127.pdf:pdf},
+journal={Front. Neurosci.},
 keywords = {brain connectivity,brain connectivity, dynamic data analysis, optimization, ordinary differential equations, task-related fMRI,dynamic data analysis,optimization,ordinary differential equations,task-related},
 number = {February},
 pages = {1--19},
@@ -821,8 +822,8 @@ year = {2019}
 @article{Chen2015,
 author = {Chen, Jingyuan E and Glover, Gary H},
 doi = {10.1007/s11065-015-9294-9},
-file = {:Users/lorenafreitas/Library/Application Support/Mendeley Desktop/Downloaded/6d5d0e73f208afe77ff4ca4f099f30bd3b9c4280.pdf:pdf},
 keywords = {bold,fmri,methods,resting-state},
+journal = {Neuropsychol Rev.},
 pages = {289--313},
 title = {{Functional Magnetic Resonance Imaging Methods}},
 url = {http://download.springer.com/static/pdf/426/art{\%}253A10.1007{\%}252Fs11065-015-9294-9.pdf?originUrl=http{\%}3A{\%}2F{\%}2Flink.springer.com{\%}2Farticle{\%}2F10.1007{\%}2Fs11065-015-9294-9{\&}token2=exp=1494586918{~}acl={\%}2Fstatic{\%}2Fpdf{\%}2F426{\%}2Fart{\%}25253A10.1007{\%}25252Fs11065-015-929},
@@ -1182,19 +1183,17 @@ year = {2006}
 
 
 @Inbook{DEsposito2016,
-author="D'Esposito, Mark
-and Kayser, Andrew
-and Chen, Anthony",
-editor="Filippi, Massimo",
-title="Functional MRI: Applications in Cognitive Neuroscience",
-bookTitle="fMRI Techniques and Protocols",
-year="2016",
-publisher="Springer New York",
-address="New York, NY",
-pages="317--353",
-isbn="978-1-4939-5611-1",
-doi="10.1007/978-1-4939-5611-1_11",
-url="https://doi.org/10.1007/978-1-4939-5611-1_11"
+author={D'Esposito, Mark and Kayser, Andrewand Chen, Anthony},
+editor={Filippi, Massimo},
+title={Functional MRI: Applications in Cognitive Neuroscience},
+bookTitle={fMRI Techniques and Protocols},
+year={2016},
+publisher={Springer New York},
+address={New York, NY},
+pages={317--353},
+isbn={978-1-4939-5611-1},
+doi={10.1007/978-1-4939-5611-1_11},
+url={https://doi.org/10.1007/978-1-4939-5611-1_11}
 }
 
 @article{Devor2003,
@@ -1214,7 +1213,7 @@ year = {2003}
 @article{Di2015,
 author = {Di, Xin and Fu, Zening and Chan, Shing Chow and Hung, Yeung Sam and Biswal, Bharat B},
 doi = {10.3389/fnhum.2015.00543},
-file = {:Users/lorenafreitas/Library/Application Support/Mendeley Desktop/Downloaded/907bbc3d5d94b3edbef2072d7889e330dc732fc4.pdf:pdf},
+journal = {Front. Hum. Neurosci.},
 keywords = {dynamic connectivity,functional connectivity,time-varying correlation coefficient,vis,visual system},
 number = {September},
 pages = {1--11},
@@ -1541,7 +1540,7 @@ year = {2018}
 }
 
 @article{Freitas2020,
-author = {Freitas, Lorena G.A. and Bolton, Thomas A.W. and Krikler, Benjamin E. and Jochaut, Delphine and Giraud, Anne-Lise and H{\"{u}}ppi, Petra S. and {Van De Ville}, Dimitri},
+author = {Freitas, Lorena G. A. and Bolton, Thomas A. W. and Krikler, Benjamin E. and Jochaut, Delphine and Giraud, Anne-Lise and H{\"{u}}ppi, Petra S. and {Van De Ville}, Dimitri},
 doi = {10.1016/j.neuroimage.2020.116635},
 issn = {10538119},
 journal = {NeuroImage},
@@ -1754,7 +1753,7 @@ year = {2013}
 @article{Ge2019,
 author = {Ge, Bao and Wang, Huan and Wang, Panpan and Tian, Yin and Zhang, Xin and Liu, Tianming},
 keywords = {Dynamic function brain network,Task-fMRI,Dictionary learning and sparse coding,coding,dictionary learning and sparse,dynamic function brain network,task-fmri},
-publisher = {Brain Imaging and Behavior},
+journal = {Brain Imaging and Behavior},
 title = {{Discovering and characterizing dynamic functional brain networks in task FMRI}},
 year = {2019}
 }
@@ -2364,6 +2363,7 @@ year = {1994}
 @article{Kahn2011,
 author = {Kahn, Itamar and Desai, Mitul and Knoblich, Ulf and Bernstein, Jacob and Henninger, Michael and Graybiel, Ann M and Boyden, Edward S and Buckner, Randy L and Moore, Christopher I},
 doi = {10.1523/JNEUROSCI.0007-11.2011},
+journal = {J Neurosci},
 number = {42},
 pages = {15086--15091},
 title = {{Characterization of the Functional MRI Response Temporal Linearity via Optical Control of Neocortical Pyramidal Neurons}},
@@ -2836,6 +2836,7 @@ year = {2015}
 @article{Li2016,
 author = {Li, Gang and Wang, Li and Shi, Feng and Gilmore, John H and Lin, Weili and Shen, Dinggang and Engineering, Cognitive},
 doi = {10.1016/j.media.2015.04.005.Construction},
+journal = {Med Image Anal},
 number = {1},
 pages = {22--36},
 title = {{Construction of 4D High-definition Cortical Surface Atlases of Infants: Methods and Applications}},
@@ -3334,6 +3335,7 @@ year = {2010}
 @article{Mckeown1998,
 author = {Mckeown, Martin J and Makeig, Scott and Brown, Greg G and Jung, Tzyy-ping and Kindermann, Sandra S and Bell, Anthony J and Sejnowski, Terrence J},
 keywords = {functional magnetic resonance imaging,higher-order statistics,independent component analysis},
+journal = {Human Brain Mapping},
 number = {June 1997},
 pages = {160--188},
 title = {{Analysis of fMRI Data by Blind Separation Into Independent Spatial Components}},
@@ -4061,7 +4063,7 @@ year = {2013}
 @article{Rissman2004,
 author = {Rissman, Jesse and Gazzaley, Adam and Esposito, Mark D},
 doi = {10.1016/j.neuroimage.2004.06.035},
-file = {:Users/lorenafreitas/Downloads/1-s2.0-S105381190400360X-main (2).pdf:pdf},
+journal = {NeuroImage},
 keywords = {correlation,delay period,functional connectivity,memory,network,working},
 pages = {752--763},
 title = {{Measuring functional connectivity during distinct stages of a cognitive task}},
