--- a/head/dedication.tex
+++ b/head/dedication.tex
@@ -5,15 +5,15 @@
 \vspace*{3cm}
 
 \begin{raggedleft}
-    	Wings are a constraint that makes \\
-	it possible to fly.\\
-     --- Robert Bringhurst\\
+ %   	Wings are a constraint that makes \\
+%	it possible to fly.\\
+ %    --- Robert Bringhurst\\
 \end{raggedleft}
 
 \vspace{4cm}
 
 \begin{center}
-    To Iva\dots
+    Para minha mãe, Iva\dots
 \end{center}
 
 
